Update page geometry settings

--- a/config/bundle/page.tex
+++ b/config/bundle/page.tex
@@ -1,2 +1,2 @@
 % TODO: list "preset" settings?
-%\geometry{bindingoffset=5truemm, left=25truemm, right=25truemm, bottom=25truemm, includefoot}
+%\geometry{driver=dvipdfmx,bindingoffset=5truemm, left=25truemm, right=25truemm, bottom=25truemm, includefoot}
