--- a/bundle/hyper.tex
+++ b/bundle/hyper.tex
@@ -4,7 +4,7 @@
 
 %# hyperref : ...
 %\usepackage{hyperref}
-\usepackage[dvipdfmx]{hyperref}
+\usepackage[dvipdfmx,hidelinks]{hyperref}
 
 % pxjahyper : ...
 \usepackage{pxjahyper}
